# crisp

./: .gitignore  CMakeLists.txt  crisp.cmake
arch/x86_64/: CMakeLists.txt  spsc_msvc.asm  stack_msvc.asm  turbo_list_msvc.asm
atomic/: CMakeLists.txt  spsc.c  spsc.h  spsc_controller.c  spsc_controller.h  spsc_controller_x86_64_msvc.asm  stack.c  stack.h  type_spsc.h  type_stack.h
base/: CMakeLists.txt  allocator_stdlib.c  allocator_stdlib.h  type_allocator.h  type_atomic.h  type_primitive.h
cmake/: app.cmake  asm.cmake  git.cmake  inc.cmake  lib.cmake  preset.cmake
crisp/: alloc.c  alloc.h  atomic.c  atomic.h  list.c  list.h  (+10 more)
crisp-build/linux/x86_64/: CMakeLists.txt
crisp-example/: atomic.c  str.c
crisp/list/: CMakeLists.txt  dynamic_list.c  dynamic_list.h  dynamic_list_iterate.c  dynamic_list_iterate.h  list.c  list.h  list_iterate.c  list_iterate.h  turbo_list.h  type.h
examples/: CMakeLists.txt
examples.performance/atomic/: CMakeLists.txt  spsc.cpp  spsc.hpp  spsc_boost.cpp  spsc_boost.hpp  spsc_main.cpp
examples.performance/list/: CMakeLists.txt  main.cpp  pf_list.cpp  pf_list.h  pf_stl_list.cpp  pf_stl_list.h  pf_turbo.cpp  pf_turbo.h
examples/atomic/: CMakeLists.txt  spsc.c  spsc.cpp  stack.cpp
examples/collections/: CMakeLists.txt
examples/collections/list/: CMakeLists.txt  basic.c
examples/collections/map/: CMakeLists.txt  basic.c
examples/collections/set/: CMakeLists.txt  basic.c
examples/collections/str/: CMakeLists.txt  basic.c
examples/core/: CMakeLists.txt  print.c
examples/core/mem/: CMakeLists.txt  basic.c  ops.c
examples/core/sync/: CMakeLists.txt  mpmc.c
examples/core/task/: CMakeLists.txt  basic.c  counter.c
examples/coro/: coro.c
examples/cpu/: cpu.c
examples/list/: CMakeLists.txt  dynamic_list.c  list.c
examples/map/: map.c
examples/mem/: alloc.c  mem.c
examples/queue/: CMakeLists.txt  queue.c
examples/sched/: async.c  sched.c
examples/set/: set.c
examples/str/: str.c
examples/sync/: mpmc.c
examples/task/: task.c
examples/thread/: CMakeLists.txt
examples/thread/thd/: CMakeLists.txt  basic.c
examples/turbo/: CMakeLists.txt  turbo_list.c
list/: CMakeLists.txt  dynamic_list.c  dynamic_list.h  dynamic_list_controller.c  dynamic_list_controller.h  list.c  list.h  list_controller.c  list_controller.h  list_iterate.c  list_iterate.h  type_dynamic_list.h  type_list.h
list/turbo/: CMakeLists.txt  turbo_list.h  turbo_list_x86_64_msvc.asm
preset/win32/: CMakeLists.txt
preset/win32/msvc/: CMakeLists.txt
queue/: CMakeLists.txt  queue.c  queue.h  queue_controller.c  queue_controller.h  type.h
source/allocator/: CMakeLists.txt  aligned_heap.c  allocator.c  system_paging.c
source/allocator/details/: details_allocator.c
source/allocator/details/aligned_heap/: aheap_init.c  aheap_manip.c
source/allocator/details/system_paging/: syspaging_init.c  syspaging_manip.c
source/details/: CMakeLists.txt
source/details/circular_queue/: cqueue.c
source/stack/: CMakeLists.txt  stack.c  stack_init.c  stack_manip.c
source/stack/details/: details_stack.c  details_stack_init.c  details_stack_manip.c
src/: CMakeLists.txt  alloc.c  atom.c  atom.h  atomic.c  bit.h  box.c  box.h  collections.h  core.c  core.h  coro.c  coro.h  cpu.c  cpu.h  endian.c  endian.h  fut.c  fut.h  it.c  it.h  iter.c  iter.h  libc.c  libc.h  list.c  list.h  main.c  map.c  map.h  mem.c  mem.h  node.c  node.h  obj.c  obj.h  obj_list.c  ptr.c  ptr.h  sched.c  (+11 more)
src/arch/: cpu.h
src/arch/x86/asm/: atomic_gcc.asm  atomic_msvc.asm  bit_msvc.asm  sysv_bit.asm  sysv_cpu.asm  vectorcall_cpu.asm
src/arch/x86_64/: atom.c  cpu.c  cpu.h
src/arch/x86_64/asm/: atomic_gcc.asm  atomic_msvc.asm  bit_gcc.asm  bit_msvc.asm  cpu_gcc.asm  cpu_msvc.asm  sysv_cpu.asm
src/collections/: CMakeLists.txt  bma.c  bma.h  list.c  list.h  map.c  map.h  node.c  node.h  pos.c  pos.h  seq.c  seq.h  set.c  set.h  str.c  str.h
src/core/: CMakeLists.txt  atom.h  bit.h  box.c  box.h  cpu.h  endian.c  endian.h  fut.c  fut.h  macro.h  mem.c  mem.h  mod.c  mod.h  obj.c  obj.h  ops.h  sync.h  task.c  task.h  this.c  this.h  type.h
src/core/arch/x86/: cpu.c  cpu.h
src/core/arch/x86_64/: CMakeLists.txt  cpu.c  cpu.h
src/core/ops/: arith.c  arith.h  bit.c  bit.h  cast.c  cast.h  cmp.c  cmp.h  logical.c
src/core/sync/: mpmc.h  mpsc.c  mpsc.h  spmc.h  spsc.c  spsc.h
src/details/: alloc.c  alloc.h  atom.h  atomic.h  box.c  box.h  coro.c  coro.h  it.c  it.h  iter.c  iter.h  list.c  list.h  mem.c  mem.h  obj.c  obj.h  obj_list.c  obj_list.h  ptr.c  ptr.h  sched.c  sched.h  str.c  str.h  task.c  task.h
src/details-arch/: cpu.h
src/details-arch/x86_64/: atomic_msvc.asm  cpu.c  cpu.h  task.c  task.h
src/details-arch/x86_64/asm/: task_msvc.asm
src/libc/: CMakeLists.txt  mem.c  mem.h
src/ops/: arith.c  arith.h  bit.c  bit.h  cast.c  cast.h  cmp.c  cmp.h  logical.h
src/preset/cstd/: alloc.h  mem.c  mem.h
src/preset/env/win32/: CMakeLists.txt  env.h  sig.c  sig.h
src/preset/lib/cstd/: alloc.c  alloc.h  mem.c  mem.h
src/sub/: CMakeLists.txt
src/sub/bare/: main_linux.c  mem.c  print_linux.c  print_win32.c  win32.c
src/sub/libc/: main.c  mem.c  print.c
src/sync/: mpmc.c  mpmc.h  mpsc.c  mpsc.h  spmc.c  spmc.h  spsc.c  spsc.h
src/thread/: CMakeLists.txt  mtx.h  thd.h
src/thread/linux/: mtx.c  mtx.h  thd.c  thd.h
src/thread/win32/: mtx.c  mtx.h  sem.c  sem.h  thd.c  thd.h
stack/: CMakeLists.txt  dynamic_stack.c  dynamic_stack.h  dynamic_stack_controller.c  dynamic_stack_controller.h  stack.c  stack.h  stack_controller.c  stack_controller.h  type_dynamic_stack.h  type_stack.h
sub/: CMakeLists.txt
sub/bare/: main.c  mem.c
sub/bare/linux/: abi.h  fs.h  main.c  print.c  proc.h  std.h
sub/bare/linux/abi/: arg.h  aux.h  call.h  int.h
sub/bare/linux/fs/: dir.h  file.h  link.h  perm.h
sub/bare/linux/proc/: exec.h  exit.h  fork.h
sub/bare/linux/std/: io.h  lib.h
sub/libc/: main.c  mem.c  print.c
test_case/mpmc/: CMakeLists.txt  basic.cpp
test_case/spsc/: CMakeLists.txt  basic.c
turbo/: CMakeLists.txt  turbo_list.c  turbo_list.h
(+212 files in other folders)
