set                    (PRESET_ENV_WIN32 ON)
add_compile_definitions(PRESET_ENV_WIN32)

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set                    (PRESET_COMPILER_CLANG ON)
    add_compile_definitions(PRESET_COMPILER_CLANG)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set                    (PRESET_COMPILER_GCC ON)
    add_compile_definitions(PRESET_COMPILER_GCC)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
    set                    (PRESET_COMPILER_INTEL ON)
    add_compile_definitions(PRESET_COMPILER_INTEL)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set                    (PRESET_COMPILER_MSVC ON)
    add_compile_definitions(PRESET_COMPILER_MSVC)

    set(PRESET_LIB_CSTD      ON)
    set(PRESET_LIB_BAREMETAL OFF)
    add_subdirectory       (msvc)
endif()